--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -232,6 +232,7 @@
     <ClInclude Include="..\common\component\Impl\FS_String.h" />
     <ClInclude Include="..\common\component\Impl\FS_StringImpl.h" />
     <ClInclude Include="..\common\component\Impl\FS_ThreadPool.h" />
+    <ClInclude Include="..\common\component\Impl\GlobalInitialize.h" />
     <ClInclude Include="..\common\component\Impl\ITask.h" />
     <ClInclude Include="..\common\component\Impl\SmartVar\SmartVar.h" />
     <ClInclude Include="..\common\component\Impl\SmartVar\SmartVarArithmetic.h" />
@@ -285,6 +286,7 @@
     <ClCompile Include="..\common\component\Impl\FS_Random.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_String.cpp" />
     <ClCompile Include="..\common\component\Impl\FS_ThreadPool.cpp" />
+    <ClCompile Include="..\common\component\Impl\GlobalInitialize.cpp" />
     <ClCompile Include="..\common\component\Impl\SmartVar\SmartVar.cpp" />
     <ClCompile Include="..\common\component\Impl\SmartVar\SmartVarArithmetic.cpp" />
     <ClCompile Include="..\common\component\Impl\SmartVar\SmartVarTraits.cpp" />
