--- a/TestSuit/TestSuit/TestSuit.vcxproj
+++ b/TestSuit/TestSuit/TestSuit.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="TestInst\TestLogFile.h" />
     <ClInclude Include="TestInst\TestRandom.h" />
     <ClInclude Include="TestInst\TestString.h" />
+    <ClInclude Include="TestInst\TestSystemUtil.h" />
     <ClInclude Include="TestInst\TestThreadPool.h" />
     <ClInclude Include="TestInst\TestTime.h" />
     <ClInclude Include="TestInst\TestTimeWheel.h" />
