--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -258,6 +258,7 @@
     <ClInclude Include="..\common\log\Impl\FS_Log.h" />
     <ClInclude Include="..\common\log\Impl\FS_LogImpl.h" />
     <ClInclude Include="..\common\log\Interface\ILog.h" />
+    <ClInclude Include="..\common\log\Interface\ILogImpl.h" />
     <ClInclude Include="..\common\log\Log.h" />
     <ClInclude Include="..\common\net\net.h" />
     <ClInclude Include="..\common\net\protocol\defs\ProtocolDefs.h" />
@@ -311,6 +312,7 @@
     <ClCompile Include="..\common\component\Impl\Trigger.cpp" />
     <ClCompile Include="..\common\log\Defs\LogData.cpp" />
     <ClCompile Include="..\common\log\Impl\FS_Log.cpp" />
+    <ClCompile Include="..\common\log\Interface\ILog.cpp" />
     <ClCompile Include="..\common\net\protocol\defs\ProtocolDefs.cpp" />
     <ClCompile Include="..\common\socket\Impl\SocketUtil.cpp" />
     <ClCompile Include="base.cpp" />
