--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="..\common\assist\assistobjs\Impl\SmartPtr.h" />
     <ClInclude Include="..\common\assist\assistobjs\Impl\SmartPtrImpl.h" />
     <ClInclude Include="..\common\assist\utils\Defs\FS_IPUtilDefs.h" />
+    <ClInclude Include="..\common\assist\utils\Defs\SystemUtilDefs.h" />
     <ClInclude Include="..\common\assist\utils\Impl\FS_BitUtil.h" />
     <ClInclude Include="..\common\assist\utils\Impl\FS_BitUtilImpl.h" />
     <ClInclude Include="..\common\assist\utils\Impl\FS_CpuUtil.h" />
@@ -279,6 +280,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\3rd\tiny-utf8\lib\tinyutf8.cpp" />
     <ClCompile Include="..\common\assist\assistobjs\Defs\AssistObjsDefs.cpp" />
+    <ClCompile Include="..\common\assist\utils\Defs\SystemUtilDefs.cpp" />
     <ClCompile Include="..\common\assist\utils\Impl\FS_BitUtil.cpp" />
     <ClCompile Include="..\common\assist\utils\Impl\FS_CpuUtil.cpp" />
     <ClCompile Include="..\common\assist\utils\Impl\FS_DirectoryUtil.cpp" />
