--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -273,6 +273,12 @@
     <ClInclude Include="..\common\log\Interface\ILog.h" />
     <ClInclude Include="..\common\log\Interface\ILogImpl.h" />
     <ClInclude Include="..\common\log\Log.h" />
+    <ClInclude Include="..\common\memorypool\Defs\MemoryAlloctor.h" />
+    <ClInclude Include="..\common\memorypool\Defs\MemoryAlloctorImpl.h" />
+    <ClInclude Include="..\common\memorypool\Defs\MemoryBlock.h" />
+    <ClInclude Include="..\common\memorypool\Impl\MemoryPoolMgr.h" />
+    <ClInclude Include="..\common\memorypool\Interface\IMemoryPool.h" />
+    <ClInclude Include="..\common\memorypool\memorypool.h" />
     <ClInclude Include="..\common\net\net.h" />
     <ClInclude Include="..\common\net\protocol\defs\ProtocolDefs.h" />
     <ClInclude Include="..\common\net\protocol\protocol.h" />
@@ -333,6 +339,10 @@
     <ClCompile Include="..\common\log\Defs\LogTask.cpp" />
     <ClCompile Include="..\common\log\Impl\FS_Log.cpp" />
     <ClCompile Include="..\common\log\Interface\ILog.cpp" />
+    <ClCompile Include="..\common\memorypool\Defs\MemoryAlloctor.cpp" />
+    <ClCompile Include="..\common\memorypool\Defs\MemoryBlock.cpp" />
+    <ClCompile Include="..\common\memorypool\Impl\MemoryPoolMgr.cpp" />
+    <ClCompile Include="..\common\memorypool\Interface\IMemoryPool.cpp" />
     <ClCompile Include="..\common\net\protocol\defs\ProtocolDefs.cpp" />
     <ClCompile Include="..\common\socket\Impl\SocketUtil.cpp" />
     <ClCompile Include="base.cpp" />
