--- a/base/base/base.vcxproj
+++ b/base/base/base.vcxproj
@@ -276,8 +276,9 @@
     <ClInclude Include="..\common\memorypool\Defs\MemoryAlloctor.h" />
     <ClInclude Include="..\common\memorypool\Defs\MemoryAlloctorImpl.h" />
     <ClInclude Include="..\common\memorypool\Defs\MemoryBlock.h" />
+    <ClInclude Include="..\common\memorypool\Defs\MemoryPoolCreateDefs.h" />
     <ClInclude Include="..\common\memorypool\Impl\MemoryPoolMgr.h" />
-    <ClInclude Include="..\common\memorypool\Interface\IMemoryPool.h" />
+    <ClInclude Include="..\common\memorypool\Interface\IMemoryPoolMgr.h" />
     <ClInclude Include="..\common\memorypool\memorypool.h" />
     <ClInclude Include="..\common\net\net.h" />
     <ClInclude Include="..\common\net\protocol\defs\ProtocolDefs.h" />
@@ -341,8 +342,9 @@
     <ClCompile Include="..\common\log\Interface\ILog.cpp" />
     <ClCompile Include="..\common\memorypool\Defs\MemoryAlloctor.cpp" />
     <ClCompile Include="..\common\memorypool\Defs\MemoryBlock.cpp" />
+    <ClCompile Include="..\common\memorypool\Defs\MemoryPoolCreateDefs.cpp" />
     <ClCompile Include="..\common\memorypool\Impl\MemoryPoolMgr.cpp" />
-    <ClCompile Include="..\common\memorypool\Interface\IMemoryPool.cpp" />
+    <ClCompile Include="..\common\memorypool\Interface\IMemoryPoolMgr.cpp" />
     <ClCompile Include="..\common\net\protocol\defs\ProtocolDefs.cpp" />
     <ClCompile Include="..\common\socket\Impl\SocketUtil.cpp" />
     <ClCompile Include="base.cpp" />
